program wont work when file is corupt

--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,8 @@
   <artifactId>is-this-board-legal</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <packaging>jar</packaging>
   <name>is-this-board-legal</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -95,7 +94,7 @@
       <resource>
         <directory>${basedir}/src/main/resources</directory>
         <includes>
-          <include>**/*</include>
+          <include>board.txt</include>
         </includes>
       </resource>
     </resources>
